# inep-compare

./: .gitignore  lookup_scopus_ids.py  pyproject.toml  run_enrichment.py  run_fitness.py  run_microdados.py  run_phase2.py  run_reliability.py  run_sprint1.py
.claude/: launch.json  settings.local.json
bolsista/: README.md
config/: lgpd_config.yaml  sample_config.yaml  scoring_weights.yaml  secrets_loader.py  source_registry.yaml
connectors/: base.py
connectors/api/: crossref.py  dimensions.py  lens.py  openalex.py  scopus.py  unpaywall.py  wos.py
connectors/file/: inep_microdados.py
convergence/: external_validation.py  matcher.py  reliability.py  reliability_rules.py
dashboard/: app.py  data_loader.py
dashboard/tabs/: __init__.py  convergence.py  enrichment.py  fitness.py  registry.py  reliability.py
enrichment/: coauthorship.py  diamond_oa.py  disambiguation.py  funder.py  geographic.py  patents.py  policy_docs.py  sdg.py  sensitivity.py  stratified.py
outputs/dataset/: exporter.py
outputs/reports/: reliability.py
registry/: crosswalk_template.csv
scoring/: confidence.py  coverage.py  fitness.py  open_access.py  static_scores.yaml
tests/connectors/: test_crossref.py  test_dimensions.py  test_inep_microdados.py  test_lens.py  test_openalex.py  test_openalex_guard.py  test_scopus.py
tests/convergence/: test_external_validation.py  test_matcher.py  test_reliability.py  test_reliability_rules.py
tests/dashboard/: test_data_loader.py  test_enrichment_tab.py  test_reliability_tab.py
tests/enrichment/: test_coauthorship.py  test_diamond_oa.py  (+8 more)
(+13 files in other folders)
